Database changes / view layout bug fixed

--- a/JooleStoreApp/Content/JooleStyles/CompareProduct.css
+++ b/JooleStoreApp/Content/JooleStyles/CompareProduct.css
@@ -1,10 +1,9 @@
 ﻿html {
-    
 }
 
 table {
-    border: solid 1px;
-    border-color: grey;
+    border-spacing: 0;
+    border-collapse: collapse;
 }
 
 tr {
@@ -18,44 +17,62 @@ td {
 }
 
 .compareProduct_container {
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+    font-family: Calibri;
 }
 
 .compareProduct_table {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .compareProduct_table_image {
     height: 200px;
     border: solid 1px;
-    border-color: grey;
+    border-color: lightgrey;
 }
 .compareProduct_table_bigLabel {
     background-color: lightgrey;
     width: 200px;
     border: solid 1px;
-    border-color: grey;
+    border-color: lightgrey;
+    font-weight: bold;
 }
 
 .compareProduct_table_smallLabel {
     background-color: lightgrey;
     width: 200px;
     border: solid 1px;
-    border-color: grey;
+    border-color: lightgrey;
+    font-weight: bold;
 }
 
 .compareProduct_table_data {
     background-color: white;
     border: solid 1px;
-    border-color: grey;
+    border-color: lightgrey;
+}
+
+.compareProduct_smallerTable {
+    border: solid 1px;
+    border-color: lightgrey;
+    border-spacing: 0;
+    border-collapse: collapse;
 }
 
 .compareProduct_table_smallerLabel {
     background-color: lightgrey;
     border-right: solid 1px;
-    border-right-color: grey;
+    border-right-color: lightgrey;
     width: 50px;
+    font-weight: bold;
 }
 
 .compareProduct_table_smallerData {
     background-color: white;
-    border-right:solid 1px;
+    border-right: solid 1px;
     border-right-color: grey;
 }
